--- a/.github/workflows/main-release.yml
+++ b/.github/workflows/main-release.yml
@@ -33,7 +33,7 @@ jobs:
       - name: Build required release files
         run: |
           container_id=${{env.container_id}}
-          docker exec "$container_id" -e VERSION "v0.0.0" task make-release-artifacts
+          docker exec -e VERSION "v0.0.0" "$container_id" task make-release-artifacts
 
       - name: Upload release assets
         uses: svenstaro/upload-release-action@7319e4733ec7a184d739a6f412c40ffc339b69c7 # this is v2.5.0, but pinned
