--- a/.github/workflows/main-release.yml
+++ b/.github/workflows/main-release.yml
@@ -33,7 +33,7 @@ jobs:
       - name: Build required release files
         run: |
           container_id=${{env.container_id}}
-          docker exec -e VERSION "v0.0.0" "$container_id" task make-release-artifacts
+          docker exec -e VERSION "$container_id" task make-release-artifacts
         env:
           VERSION: v0.0.0
 
