--- a/.github/workflows/create-release-main.yml
+++ b/.github/workflows/create-release-main.yml
@@ -14,6 +14,7 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
+        if: 
         with:
           fetch-depth: 0 # required to access tags
           submodules: "true"
@@ -33,9 +34,7 @@ jobs:
       - name: Build required release files
         run: |
           container_id=${{env.container_id}}
-          docker exec "$container_id" task VERSION=v0.0.0 LATEST_VERSION_TAG=v0.0.0 make-release-artifacts
-        # env:
-          # VERSION: v0.0.0
+          docker exec "$container_id" task VERSION=v0.0.0-main LATEST_VERSION_TAG=v0.0.0-main make-release-artifacts
 
       - name: Upload release assets
         uses: svenstaro/upload-release-action@7319e4733ec7a184d739a6f412c40ffc339b69c7 # this is v2.5.0, but pinned
