--- a/.github/workflows/create-release-main.yml
+++ b/.github/workflows/create-release-main.yml
@@ -33,22 +33,22 @@ jobs:
           docker start "$container_id"
           echo "container_id=$container_id" >> $GITHUB_ENV
 
-      - name: Build required release files
-        run: |
-          container_id=${{env.container_id}}
-          docker exec "$container_id" task VERSION=${{ env.ARTIFACT_VERSION }} LATEST_VERSION_TAG=${{ env.ARTIFACT_VERSION }} make-release-artifacts
+      # - name: Build required release files
+      #   run: |
+      #     container_id=${{env.container_id}}
+      #     docker exec "$container_id" task VERSION=${{ env.ARTIFACT_VERSION }} LATEST_VERSION_TAG=${{ env.ARTIFACT_VERSION }} make-release-artifacts
 
-      - name: Upload release assets
-        uses: svenstaro/upload-release-action@7319e4733ec7a184d739a6f412c40ffc339b69c7 # this is v2.5.0, but pinned
-        with:
-          repo_token: ${{ secrets.GITHUB_TOKEN }}
-          tag: main
-          file: "v2/out/release/*"
-          file_glob: true
-          prerelease: true
-          overwrite: true
-          release_name: "Experimental"
-          body: "Experimental release created from main branch on commit ${{ github.sha }}."
+      # - name: Upload release assets
+      #   uses: svenstaro/upload-release-action@7319e4733ec7a184d739a6f412c40ffc339b69c7 # this is v2.5.0, but pinned
+      #   with:
+      #     repo_token: ${{ secrets.GITHUB_TOKEN }}
+      #     tag: main
+      #     file: "v2/out/release/*"
+      #     file_glob: true
+      #     prerelease: true
+      #     overwrite: true
+      #     release_name: "Experimental"
+      #     body: "Experimental release created from main branch on commit ${{ github.sha }}."
 
       - name: Docker login
         run: |
